# homelabeazy

./: .gitignore  .gitignore.gitea  .pre-commit-config.yaml  .yamllint.yml  404.html  CONTRIBUTING.md  Makefile  PRIVATE_DEPLOYMENT.md  Pipfile  README.md  advanced-usage.html  ansible.cfg  community.html  configuration.html  configure_proxmox.sh  contributing.html  customization.html  deployment.html  feed.xml  folder-structure.html  get_helm.sh  getting-started.html  guides.html  homelab.tf  import.sh  index.html  ldap.toml  ldap.toml.example  package-lock.json  package.json  reference.html  requirements.txt  robots.txt  services.html  setup.sh  sitemap.xml  technical-design.html  terraform.tfvars  test.yml  test_synology.yml  (+1 more)
.gitea/: gitleaks.toml
_site/: feed.xml  index.html  robots.txt  sitemap.xml
about/: index.html
advanced-usage/: index.html
ansible/: README.md  ansible.cfg  requirements.txt  requirements.yml
apps/: README.md  app-of-apps.yml  appflowy.yml  authelia.yml  bitwarden.yml  bolt.yml  coder.yml  docling.yml  faster-whisper.yml  gitea.yml  gluetun.yml  grafana.yml  guacamole.yml  home-assistant.yml  homebox.yml  homelab-importer.yml  (+42 more)
tools/homelab-importer/: .coverage  Dockerfile  README.md  pyproject.toml  requirements.txt
tools/homelab-importer/src/: discover.py  docker.py  main.py  mapping.py  terraform.py  utils.py
tools/homelab-importer/src/homelab_importer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/homelab-importer/tests/: test_discover.py  test_docker.py  test_main.py  test_mapping.py  test_terraform.py
(+663 files in other folders)
