[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-importer"
version = "0.0.1"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A command-line tool to import data into a homelab environment."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "proxmoxer",
    "python-dotenv",
    "python-hcl2",
    "requests",
    "PyYAML",
    "hvac"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "pytest"
]

[project.urls]
"Homepage" = "https://github.com/user/homelab-importer"
"Bug Tracker" = "https://github.com/user/homelab-importer/issues"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
